# pdf-editor

./: .gitignore  Makefile  README.md  pyproject.toml
app/: Dockerfile
app/src/: main.py
